@@ -4,6 +4,7 @@ Date: ???
   Changes:
     - Fix: Removed errant debug output.
     - Fix: Buildable Melting Ice mod compatibilty.
+    - Fix: Selecting tiles from ungenerated chunks (i.e. in satellite view) no longer crashes.
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.1
 Date: 2024-12-15
